Fix bug causing song-request box to display off-centre

--- a/app/styles/components/footer/footer.scss
+++ b/app/styles/components/footer/footer.scss
@@ -1,5 +1,5 @@
 footer {
-  font-size: .88em;
+  font-size: .74em;
   text-transform: uppercase;
   position: absolute;
   bottom: 0;
