--- a/app/styles/pages/rsvp.scss
+++ b/app/styles/pages/rsvp.scss
@@ -18,8 +18,6 @@
 
 .rsvp-box {
   font-size: 1.2em;
-  position: absolute;
-  top: 50%;
   display: flex;
   width: 60%;
   padding: 1.6em 1.6em 1.3em 1.6em;
@@ -28,7 +26,6 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  transform: translateY(-50%);
 
   h1 {
     font-size: 1.9em;
